force-app/main/default/objects/conversion__c/conversion__c.object-meta.xml
<CustomObject>
    <label>conversion</label>
    <nameField>
        <label>conversion1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>conversions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>