force-app/main/default/objects/conversion__c/fields/conCompany__c.field-meta.xml
<CustomField>
    <fullName>conCompany__c</fullName>
    <label>conCompany</label>
    <length>50</length>
    <type>Text</type>
</CustomField>