force-app/main/default/objects/conversion__c/fields/conCurrentGenerators_c__c.field-meta.xml
<CustomField>
    <fullName>conCurrentGenerators_c__c</fullName>
    <label>conCurrentGenerators__c</label>
    <length>40</length>
    <type>Text</type>
</CustomField>