force-app/main/default/objects/conversion__c/fields/conDescription__c.field-meta.xml
<CustomField>
    <fullName>conDescription__c</fullName>
    <label>conDescription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>