force-app/main/default/objects/conversion__c/fields/ConDunsNumber__c.field-meta.xml
<CustomField>
    <fullName>ConDunsNumber__c</fullName>
    <label>ConDunsNumber</label>
    <length>25</length>
    <type>Text</type>
</CustomField>