force-app/main/default/objects/conversion__c/fields/conEmail__c.field-meta.xml
<CustomField>
    <fullName>conEmail__c</fullName>
    <label>conEmail</label>
    <type>Email</type>
</CustomField>