force-app/main/default/objects/conversion__c/fields/conIndustry__c.field-meta.xml
<CustomField>
    <fullName>conIndustry__c</fullName>
    <label>conIndustry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>