force-app/main/default/objects/conversion__c/fields/conL_Deatail_c__c.field-meta.xml
<CustomField>
    <fullName>conL_Deatail_c__c</fullName>
    <label>conL_Deatail__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>