force-app/main/default/objects/conversion__c/fields/conLdtail_c__c.field-meta.xml
<CustomField>
    <fullName>conLdtail_c__c</fullName>
    <label>conLdtail__c</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>