force-app/main/default/objects/conversion__c/fields/conLeadD_T_c__c.field-meta.xml
<CustomField>
    <fullName>conLeadD_T_c__c</fullName>
    <label>conLeadD_T__c</label>
    <type>DateTime</type>
</CustomField>