force-app/main/default/objects/conversion__c/fields/conMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>conMobilePhone__c</fullName>
    <label>conMobilePhone</label>
    <type>Phone</type>
</CustomField>