force-app/main/default/objects/conversion__c/fields/conNumber__c.field-meta.xml
<CustomField>
    <fullName>conNumber__c</fullName>
    <label>conNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>