force-app/main/default/objects/conversion__c/fields/conNumberofLoc__c.field-meta.xml
<CustomField>
    <fullName>conNumberofLoc__c</fullName>
    <label>conNumberofLoc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>