force-app/main/default/objects/conversion__c/fields/conPercent_c__c.field-meta.xml
<CustomField>
    <fullName>conPercent_c__c</fullName>
    <label>conPercent__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>