force-app/main/default/objects/conversion__c/fields/conPrimary_c__c.field-meta.xml
<CustomField>
    <fullName>conPrimary_c__c</fullName>
    <label>conPrimary__c</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>