force-app/main/default/objects/conversion__c/fields/conRating__c.field-meta.xml
<CustomField>
    <fullName>conRating__c</fullName>
    <label>conRating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>