force-app/main/default/objects/conversion__c/fields/conRevenue__c.field-meta.xml
<CustomField>
    <fullName>conRevenue__c</fullName>
    <label>conRevenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>