force-app/main/default/objects/conversion__c/fields/conSICCode_c__c.field-meta.xml
<CustomField>
    <fullName>conSICCode_c__c</fullName>
    <label>conSICCode__c</label>
    <length>40</length>
    <type>Text</type>
</CustomField>