force-app/main/default/objects/conversion__c/fields/conTitle__c.field-meta.xml
<CustomField>
    <fullName>conTitle__c</fullName>
    <label>conTitle</label>
    <length>25</length>
    <type>Text</type>
</CustomField>