force-app/main/default/objects/conversion__c/fields/conWebsite__c.field-meta.xml
<CustomField>
    <fullName>conWebsite__c</fullName>
    <label>conWebsite</label>
    <type>Url</type>
</CustomField>